尝试修改部分有点不太规范的代码，比如用Optional替代null判断